--- a/5_22.ipynb
+++ b/5_22.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmnhxK3zdaAGeYH7pUDg3M",
+      "authorship_tag": "ABX9TyPxWMoyuaI7B0hCsZs1f665",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,6 +64,47 @@
         "\n",
         "print(len(text))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import nltk\n",
+        "import os\n",
+        "import nltk.corpus\n",
+        "\n",
+        "text = \"In Brazil they drive on the right-hand side of the road. Brazil has a large coastline on the eastern side of South America\"\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "token = word_tokenize(text)\n",
+        "\n",
+        "from nltk.probability import FreqDist\n",
+        "fdist = FreqDist(token)\n",
+        "\n",
+        "fdist1 = fdist.most_common(10)\n",
+        "\n",
+        "\n",
+        "key_list = []\n",
+        "value_list = []\n",
+        "\n",
+        "for key,val in fdist1:\n",
+        "  key_list.append(key)\n",
+        "  value_list.append(val)\n",
+        "\n",
+        "x=np.arange(len(key_list))\n",
+        "plt.bar(x, value_list, tick_label=key_list)\n",
+        "plt.title('Top 10 words')\n",
+        "plt.xlabel('Words')\n",
+        "plt.ylabel('Nums')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "le7tOWr73S3f"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
